# iida-display

./: .env.example  .gitignore  INTEGRATION_GUIDE.md  README.md  app.py  gemini_service.py  gunicorn.conf.py  main.py  mentor_service.py  models.py  pdf_processor.py  pyproject.toml  requirements.txt  routes.py  schema.sql  start_server.sh  vercel.env.example  vercel.json
attached_assets/: IDA_Report_2025-11-24_19-56-19_1767882144224.txt  parth final report_1754690097112.docx  solvr_(2)_1773911938096.jsx
public/static/: manifest.json
public/static/css/: custom.css
public/static/js/: app.js  ida-shortcode.js
replit-redirect/: README.md  main.py  requirements.txt
static/: sw.js
templates/: analyse.html  analyse.new.html  analysis_reports.html  base.html  embedded_website.html  figma_workspace.html  financial_tools.html  home.html  index.html  index_content.html  login.html  mentor.html  mentor_chats.html  payment_success.html  payment_verification.html  payments.html  plan_it_out.html  plan_it_out_result.html  plan_view.html  project_management.html  project_management_lock.html  quick_talk.html  register.html  report.html  reports_list.html  saved_plans.html  shortcode.html  simple_payment.html  view_mentor_chat.html
