[project]
name = "iida-display"
version = "1.0.0"
description = "IIDA Display - Flask business intelligence app"
requires-python = ">=3.11,<3.14"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1,<4",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "google-generativeai>=0.8.6",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42,<3",
    "werkzeug>=3.1.3",
]

[tool.vercel]
entrypoint = "app:app"
